--- a/market-ai/src/App.css
+++ b/market-ai/src/App.css
@@ -26,6 +26,20 @@ img{
   font-size: 17px;
   color: #000058;
 }
+
+a:link, a:visited {
+  background-color: rgb(0, 132, 255);
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: rgb(17, 0, 255);
+}
+
 input[type=text], select {
   
   padding: 12px 20px;
